<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.flias.appcarnaval.InicioFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <AdapterViewFlipper
            android:id="@+id/IVF"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

        </AdapterViewFlipper>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ids"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btnsitios"
                android:layout_marginTop="16dp"
                android:text="@string/SitiosTuristicos"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/btnmapa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@mipmap/ic_launcher_foregroundpr" />

            <ImageButton
                android:id="@+id/btnmapa"
                android:layout_width="126dp"
                android:layout_height="79dp"
                android:src="@mipmap/ic_launcherubic" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btnmapa"
                android:text="@string/Mapa"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/btnsitios"
                android:layout_width="118dp"
                android:layout_height="75dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/btnmapa2"
                android:src="@mipmap/ic_launcher_foregroundsiti" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btnmapa2"
                android:layout_alignRight="@+id/btnmapa2"
                android:layout_below="@+id/btnmapa2"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/Programacion" />
        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
